--- a/Sektioner/webserver.tex
+++ b/Sektioner/webserver.tex
@@ -1,6 +1,16 @@
-\section{Webserver}
+\section{Web server}
+Web serveren består af en række API'er, som bruges til at lagrer og udlevere data til brugeren. De opbevarede data kan webbrowsere hente via protokollen HTTP eller HTTPS. Den måde det fungere på er at en klient sender en HTTP-anmodning til serveren, serveren returnerer et svar til klienten. svaret kan indeholde oplysninger om den anmodning brugeren ønsker. 
+HTTP består af fire metoder:
+ 
+\begin{itemize}
+	\item GET
+	\item POST
+	\item PUT
+	\item DELETE
+  \end{itemize}
 
 \subsection{Web API}
+Som nævnte før består Converge sytemet af en række API'er og disse API'er benyttes til at komunikere med web serveren. Nedenfor ses tabeller, der repræsentere de forskellige API'er, hvor der kan ses deres adresser og en beskrivelse af deres HTTP-anmodninger.
 
 \begin{table}[H]
 	\rowcolors{2}{gray!25}{white}
@@ -72,45 +82,6 @@
 	\end{tabular}
 \end{table}
 
-\begin{table}[H]
-	\rowcolors{2}{gray!25}{white}
-	\centering
-	\caption{API addresser for Audits}
-	\label{tab:web_user}
-	\begin{tabular}{|L{0.3\textwidth}|L{0.70\textwidth}|}
-		\hline
-		\rowcolor{gray!50}
-		\multicolumn{2}{|l|}{Audits}\\
-		\hline
-		GET \newline
-		/api/Audits &
-		Henter brugeren med det givne id, er id'et sat til -1 vil den bruger der er logget ind med, returneres. \\
-        \hline
-        GET \newline
-		/api/Audits/\{id\} &
-		Sender et ønske om at få tilsendt en email til at få ændret sit kodeord, uden at være logget ind. 
-		\\
-        \hline
-        GET \newline
-		/api/Audits/\{id\} &
-		Sender et ønske om at få tilsendt en email til at få ændret sit kodeord, uden at være logget ind. 
-		\\
-		\hline
-		PUT \newline
-		/api/Audits/email/\{email\} &
-		Opdaterer brugerinformationer omkring den bruger, som er logget ind. \\
-		\hline
-		DELETE \newline
-		/api/Audits/\{id\} &
-		Sletter den bruger, som er logget ind. \\
-		\hline
-		POST \newline
-		/api/Audits &
-		Opretter en ny bruger. \\
-		\hline
-		
-	\end{tabular}
-\end{table}
 
 \begin{table}[H]
 	\rowcolors{2}{gray!25}{white}
