--- a/system-interface.tex
+++ b/system-interface.tex
@@ -3,7 +3,7 @@
 %*******************************************************************************
 % ÆNDRINGER LAVES HER
 %*******************************************************************************
-\title{Projektformulering}
+\title{Systemts grænseflader}
 % Husk at opdatere "AUTHOR" og dato i filen "00_VersionHistory".
 
 %-------------------------------------------------------------------------------
